<resources>
    <string name="app_name">SPP MOVIL</string>
    <string name="app_descripcion">Sistema de Preparacion de Pedidos Movil</string>
    <!-- FORMULARIO PARA GESTIONAR LA PANTALLA DE BASE DE DATOS -->
    <string name="frmbd">GESTION DE BASE DE DATOS</string>
    <string name="sms_descripcion_tabla">Lista de Tablas</string>

    <!-- FORMULARIO SINCRONIZACION CON SQL SERVER -->
    <string name="frmsincronizacion">SINCRONIZACION CON EL SERVIDOR</string>


    <string name="frmIngreso">ZONA DE INGRESO</string>
    <string name="p1_lblusuario">Usuario del Sistema</string>
    <string name="p1_lblClave">Clave del Usuario</string>
    <string name="p1_lblParametro">Parametro a Modificar</string>
    <string name="p1_lblValor">Valor del Parametro</string>
    <string name="p1_lblConfigurar">Configurar Parametros</string>
    <string name="lblGuardar">Guardar</string>
    <string name="lblCancelar">Cancelar</string>
    <string name="lblModificad">Parametro Modificado</string>
    <string name="lblParametroModificad">Se a modificado el Parametro: [%s]</string>
    <string name="lblParametroNoExiste">El parametro:[%s],no existe</string>
    <string name="p1_lblDispositoAutorizado">Dispositivo: [%s], Registrado</string>
    <string name="p1_lblDispositivoNoAutorizado">Dispositivo: [%s],No Registrado</string>
    <string name="p1_btnIngresar">INGRESAR</string>
    <string name="p2_lbllicencia">Licencia</string>
    <string name="p2_lblNoconectado">No conectado</string>
    <string name="p2_lblusuario">USUARIO</string>
    <string name="p2_lblrol">ROL</string>
    <string name="p2_mnu_salir">Salir</string>

    <!-- TODO: FORMULARIO ESCANEO LIBRE -->
    <string name="frmescaneolibre">Levamiento Libre</string>
    <string name="escaner_codigo_de_barra">Codigo de Barra</string>
    <string name="buscar_codigo">Escanee la caja a buscar</string>
    <string name="lblCodigo">CODIGO DE PRODUCTO</string>
    <string name="lbldescripcion">DESCRIPCION</string>
    <string name="lblcaja">CODIGO DE BARRA</string>
    <string name="lblpesolibra">PESO EN LIBRAS</string>
    <string name="lblpesokilo">PESO EN KILOGRAMOS</string>
    <string name="lbllote">LOTE</string>
    <string name="lblserie">SERIE</string>
    <string name="lblfechasacrificio">FECHA EMPAQUE</string>
    <string name="lblfechaproceso">FECHA PROCESO</string>
    <string name="lblfechavencimiento">CANTIDAD DE PIEZAS</string>
    <string name="lblpesototal">PESO TOTAL</string>
    <string name="lblcantcajas"># CAJAS</string>
    <string name="mnu_exportar">Exportar</string>
    <string name="mnu_borrar">Borrar</string>
    <string name="mnu_borrartodo">BorrarTodo</string>
    <string name="lblUsuario">USUARIOS</string>
    <string name="lblReportes">REPORTES</string>
    <string name="lblSincronizar">SINCRONIZAR</string>
    <string name="lblEscaneoLibre">ESCANEO LIBRE</string>
    <string name="buscar_usuario">Buscar por nombre de usuario</string>

    <string name="msbox_titulo_enviar">Enviar Archivo</string>
    <string name="lblNombreArchivo">Nombre del archivo</string>
    <string name="msbox_enviar">Desea enviar los codigos escaneados al servidor?</string>
    <string name="msbox_reenviar">El envio del archivo [%s] al servidor [%s], ha fallado. <BR/>Desea reinternarlo nuevamente?.</string>
    <string name="msbox_titulo_enviar_error">Error de Operacion</string>


</resources>