<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FrmPrincipal">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/pnlTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_container_margin"
        android:background="@android:drawable/editbox_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="81dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical"
                android:theme="@android:style/Holo.ButtonBar.AlertDialog">

                <TextView
                    android:id="@+id/p02_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/zebra_blue"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/p2_lbllicencia"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_weight="5"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_logo" />

            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="92dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical"
                android:theme="@android:style/Holo.ButtonBar.AlertDialog">

                <ImageView
                    android:id="@+id/p02_img_coneccion"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_action_wireless_disabled" />

                <View style="@style/Divider_Horizontal" />

                <TextView
                    android:id="@+id/p02_txt_conectado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:text="@string/p2_lblNoconectado" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/Divider_Horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p02_lbloperador"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/p2_lblusuario"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/p02_lblinfooperador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:drawable/editbox_background"
                    android:clickable="false"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/lblGuardar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View style="@style/Divider_Vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p02_lbltipousuario"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/p2_lblrol"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/p02_lblInfoEquipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:drawable/editbox_background"
                    android:clickable="false"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/lblCancelar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/PnlMenuItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:drawable/editbox_background"
        android:clipToPadding="false"
        android:contentDescription="@string/app_name"
        android:fillViewport="false"
        android:scrollbarStyle="insideOverlay">


    </ScrollView>


</LinearLayout>