<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frm_backgroudcolor"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <ImageButton
        android:id="@+id/imglgoo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/pnlingreso_backgroud"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/img_logo" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imglgoo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:drawable/edit_text"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/p1_txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/img_user_profile32x32"
                android:hint="@string/p1_lblusuario"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/zebra_blue"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/p1_txtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/img_user_password32x32"
                android:hint="@string/p1_lblClave"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorGreed"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/p1_lblNombreCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/p1_btnIngresar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:minHeight="60dp"
            android:paddingTop="10dp"
            android:text="@string/p1_btnIngresar"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_std_size" />

        <TextView
            android:id="@+id/p1_lblMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp" />


    </LinearLayout>

</RelativeLayout>