<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/p12_pnlLectura"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.sdn.slp.lecturalibre.LabLectura">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/p12_panelbusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/p12_txtCodigoBarra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/ic_action_buscar"
            android:focusable="auto"
            android:hint="@string/escaner_codigo_de_barra"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/editbox_background">

        <RelativeLayout
            android:id="@+id/p12_pnlcontenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/p12_lblcodigo"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblCodigo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/p12_lblcodigo"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/zebra_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblDescripcion"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_txtCodigo"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lbldescripcion"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtdescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_txtCodigo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lblDescripcion"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/colorRed"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblcaja"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_below="@+id/p12_txtdescripcion"
                android:layout_centerVertical="false"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblcaja"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtcaja"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/p12_txtdescripcion"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lblcaja"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/zebra_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblpesolbs"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lblcaja"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblpesolibra"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtpesolbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lblcaja"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lblpesolbs"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/colorRed"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblpesokbs"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/p12_lblpesolbs"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblpesokilo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtpesokbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/p12_lblpesolbs"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lblpesokbs"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/colorRed"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lbllote"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lblpesokbs"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lbllote"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtlote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lblpesokbs"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lbllote"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/zebra_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblserie"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lbllote"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblserie"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtserie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lbllote"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lbllote"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/zebra_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblfechaempaque"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_txtserie"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblfechasacrificio"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtfechasacrificio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_txtserie"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lblfechaempaque"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/zebra_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblfechaproceso"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lblfechaempaque"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblfechaproceso"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtfechaproceso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lblfechaempaque"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lblfechaproceso"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/colorRed"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_lblfechavencimiento"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_lblfechaproceso"
                android:layout_marginTop="2dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:text="@string/lblfechavencimiento"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p12_txtfechavencimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_txtfechaproceso"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_lblfechavencimiento"
                android:background="?android:attr/actionModeSplitBackground"
                android:gravity="center_vertical"
                android:textColor="@color/zebra_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/p12_pnlPesoTotal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_txtfechavencimiento"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="false"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p12_lblTituloPesoTotal"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="?android:attr/actionModeSplitBackground"
                    android:text="@string/lblpesototal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/p12_txtpesototal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-1dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginRight="-1dp"
                    android:background="@android:drawable/editbox_background"
                    android:elevation="0dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:targetApi="lollipop"
                    tools:text="265.35" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/p12_pnlCajaTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p12_txtfechavencimiento"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/p12_pnlPesoTotal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p12_lblTituloNoCajas"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="?android:attr/actionModeSplitBackground"
                    android:text="@string/lblcantcajas"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/p12_txtcantcajas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-1dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginRight="-1dp"
                    android:background="@android:drawable/editbox_background"
                    android:textAlignment="center"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="2" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>